--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  border: 1px solid black;
+}
+
+
+.pizza {
+  width: 100%;
+  height: 300px;
+  background-image: url('../src/Assets/Pizza.jpg');
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+} 
