--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
 .App {
   text-align: center;
+  background-color:black;
 }
+body{
+  background-color:#8B4513	;
 
+}
+h1{
+ font-family: Chalkduster, fantasy;
+ margin-left:2rem;
+ color:white;
+ 
+}
+img{
+  width:100%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +28,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +36,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
 }
 
 .App-link {
