updated the app, app has now two buttons that reroute

--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,363 @@
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  font-family: sans-serif;
   text-align: center;
-  background-color:black;
-}
-body{
-  background-color:#8B4513	;
-
-}
-h1{
- font-family: Chalkduster, fantasy;
- margin-left:2rem;
- color:white;
- 
-}
-img{
-  width:100%;
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color:black;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 16px;
+  border-bottom: 1px solid #efefef;
+  margin-bottom: 32px;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #1c5d76;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.nav-links a:last-of-type {
+  margin-right: 0;
+}
+
+.nav-links a.active {
+  border-bottom: 1px solid #1c5d76;
+}
+
+.store-header {
+  color: #1c5d76;
+}
+
+.home-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+.home-image {
+  width: 100%;
+  max-height: 400px;
+  object-fit: cover;
+}
+
+.shop-button.md-button {
+  margin-top: -16px;
+  width: 115px;
+}
+
+.items-list-wrapper {
+  margin-top: 36px;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-
 }
 
-.App-link {
-  color: #61dafb;
+.item-card {
+  width: 250px;
+  margin: 0 10px 32px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item-card p {
+  margin: 0 0 4px;
+  color: #595959;
+  text-decoration: none;
+}
+
+.item-list-image {
+  width: 50%;
+  border: 1px solid lightgray;
+}
+
+.item-wrapper {
+  width: 100%;
+  max-width: 100%;
+}
+
+.item-header {
+  display: flex;
+}
+
+.item-header h2,
+.item-header h4 {
+  color: #1c5d76;
+  margin: 0;
+}
+
+.item-header h4 {
+  margin-top: 16px;
+  margin-left: 20rem;
+}
+
+.item-sub-nav {
+  border-bottom: 1px solid #a1d5d4;
+  justify-content: center;
+}
+
+.item-sub-nav a {
+  color: #a5a5a5;
+  text-decoration: none;
+  padding: 12px;
+}
+
+.item-sub-nav a.active {
+  color: #1c5d76;
+  font-weight: bold;
+}
+
+.item-sub-nav a:first-of-type {
+  margin-right: 32px;
+}
+
+.item-card a {
+  text-decoration: none;
+}
+
+.image-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.item-title-wrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-self:center;
+  margin-bottom:2rem;
+}
+
+.item-title-wrapper h2{
+  display: flex;
+  flex-flow: column nowrap;
+  align-self:center;
+  
+}
+
+.item-description {
+  max-width: 720px;
+  margin: 32px auto;
+}
+
+.md-button {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0 8px;
+  border: none;
+  border-radius: 2px;
+  padding: 0 16px;
+  min-width: 64px;
+  height: 36px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #1c5d76;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  font-family: "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui,
+    -apple-system;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
+.p{
+  text-decoration: none;
+}
+.md-button:hover,
+.md-button:focus {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.md-button:active {
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.md-button:disabled {
+  color: rgba(0, 0, 0, 0.38);
+  background-color: rgba(0, 0, 0, 0.12);
+  box-shadow: none;
+  cursor: initial;
+}
+
+.md-button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: currentColor;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.md-button:hover::before {
+  opacity: 0.12;
+}
+
+.md-button:focus::before {
+  opacity: 0.2;
+}
+
+.md-button:active::before {
+  opacity: 0.32;
+}
+
+.md-button:disabled::before {
+  opacity: 0;
+}
+
+.md-button::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 18px;
+  border-radius: 50%;
+  padding: 50%;
+  width: 32px;
+  height: 32px;
+  background-color: currentColor;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 1s, transform 0.5s;
+}
+
+.md-button:active::after {
+  opacity: 0.4;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0s;
+}
+
+.md-button:disabled::after {
+  opacity: 0;
+}
+.md-button2 {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0 8px;
+  border: none;
+  border-radius: 2px;
+  padding: 0 16px;
+  min-width: 64px;
+  height: 36px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #1c5d76;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  font-family: "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui,
+    -apple-system;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
+.p{
+  text-decoration: none;
+}
+.md-button2:hover,
+.md-button2:focus {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.md-button2:active {
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.md-button2:disabled {
+  color: rgba(0, 0, 0, 0.38);
+  background-color: rgba(0, 0, 0, 0.12);
+  box-shadow: none;
+  cursor: initial;
+}
+
+.md-button2::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: currentColor;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.md-button2:hover::before {
+  opacity: 0.12;
+}
+
+.md-button2:focus::before {
+  opacity: 0.2;
+}
+
+.md-button2:active::before {
+  opacity: 0.32;
+}
+
+.md-button2:disabled::before {
+  opacity: 0;
+}
+
+.md-button2::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 18px;
+  border-radius: 50%;
+  padding: 50%;
+  width: 32px;
+  height: 32px;
+  background-color: currentColor;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1);
+  transition: opacity 1s, transform 0.5s;
+}
+
+.md-button2:active::after {
+  opacity: 0.4;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0s;
+}
+
+.md-button2:disabled::after {
+  opacity: 0;
 }
