--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,45 @@
 .App {
   text-align: center;
 }
+body { 
+  background: url(https://images.unsplash.com/photo-1552539618-7eec9b4d1796?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+header{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+.flex{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+p{
+  color:white;
+  margin:20px;
+  text-align:center;
+  font-weight:bold;
+}
+.carousel{
+  color:red;
+}
+h1{
+  color:white;
+}
+.container{
+  width:100%;
+  max-height:50vh;
+  overflow:hidden;
+}
+.carousel-item{ 
+ overflow:hidden;
+}
 
 .App-logo {
   height: 40vmin;
