--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,51 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(40-pizza-png-image.png);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center; 
+  margin-top: 5rem;;
+  width: 100%;
+  height: 30rem;
+ 
+  color: blue;
+}
+
+input {
+  margin: 5px;
+  border: 2px, grey, solid;
+  border-radius: 10px;
+  padding: 7px;
+  background-color: whitesmoke;
+  color: slategray;
+  
+}
+::placeholder{
+  color: slategray;
+}
+
+select {
+  border: 2px, grey, solid;
+  border-radius: 10px;
+  padding: 7px;
+  background-color: whitesmoke;
+  color: slategray;
+}
+
+button{
+  border: 2px, grey, solid;
+  border-radius: 10px;
+  padding: 7px;
+  background-color: whitesmoke;
+  color: slategray;
+}
+
