--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,46 @@
 .App {
   text-align: center;
 }
+body { 
+  background: url(https://images.unsplash.com/photo-1571407921708-4202261ea9e9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+header{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+.flex{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+}
+p{
+  color:black;
+  margin:20px;
+  text-align:center;
+  font-weight:bold;
+}
+.carousel{
+  color:red;
+}
+h1{
+  color:white;
+  
+}
+.container{
+  width:100%;
+  max-height:50vh;
+  overflow:hidden;
+}
+.carousel-item{ 
+ overflow:hidden;
+}
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +75,33 @@
   to {
     transform: rotate(360deg);
   }
+}
+.headerOne {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 2%;
+  padding-bottom: 1%;
+}
+.orderForm{
+  border: 5px solid black;
+  margin: 10%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding: 2.5%;
+  text-align: center;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.324);
+  color:black;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+li{
+  list-style: none;
+}
+div {
+  color:black;
+  font-family:"Courier New", Courier, monospace;
 }
