--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family:"Courier New", Courier, monospace;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul{
+  border: 1.8px solid black;
+  padding:0%;
+  border-radius: 5px;
+}
+
+pre {
+  color: black;
+}
+.flex{
+  border: 2px solid black;
+  background-color: rgba(255, 255, 255, 0.324);
+  margin: 5%;
+  padding: 5%;
+  border-radius: 25px;
+  font-size: 1.2rem;;
+  font-weight: bolder;
+}
+
+img{
+  max-width: 100%;
+  border-radius: 20px;
+  padding-bottom: 1.5%;
 }
