--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,6 @@ code {
   border: 3px solid black;
   border-radius: 3px;
 }
+
+/* Created by Donald Faulknor
+GitHub - https://github.com/social-collab */
