--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
   text-align: center;
+  background: #DCDCDC;
+  /* display: felx;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p{
+  color: red;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img{
+  width:50%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form{
+  border: 2px solid black;
+  width: 50%;
+  margin: 0 auto;
+  /* display: flex;  */
+}
+button{
+  margin: 1.5rem;
+}
+label {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  margin: 10px 5px;
+  font-size: 1rem;
+}
+.checkbox{
+  height: inherit;
+}
+input, select, textarea{
+  width: 60%;
+  height: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+#toppings{
+  text-align: initial;
+  margin: 10px 5px;
+}
+textarea:focus{
+  outline: none;
+  border-color: #FF7F50;
+}
+select:focus {
+  outline: none;
+  border-color: #FF7F50;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus {
+  outline: none;
+  border-color: #FF7F50;
 }
